--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,3 +1,7 @@
 <h1><%=@task.title%></h1>
 <p><%=@task.details  %></p>
 <p><%@task.completed%></p>
+<%= link_to "Delete",
+  tasks_path(@task),
+  data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+%>
