--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,7 +1,7 @@
 <h1>Edit <%=@task.title%></h1>
 
 
-<%= form_with model: @tasks do |f| %>
+<%= form_with model: @task do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
   <%= f.label :details %>
