--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,7 +1,12 @@
 <h1><%=@task.title%></h1>
 <p><%=@task.details  %></p>
 <p><%@task.completed%></p>
-<%= link_to "Delete",
-  tasks_path(@task),
+
+
+
+<%=link_to "Update", edit_path(@task)%>
+<p><%= link_to "tasks list", tasks_path %></p>
+<p><%= link_to "Delete",
+  task_path(@task),
   data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
-%>
+%></p>
